hphp/test/quick/record-ref.php.expectf
Fatal error: References are only allowed as function call arguments in %s/record-ref.php on line 9
